# homework_10.1

./: 111.ini  README.md  pyproject.toml
src/: generators.py  masks.py  processing.py  widget.py
tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
